--- a/My Personal Portfolio Website Project/index.html
+++ b/My Personal Portfolio Website Project/index.html
@@ -85,7 +85,7 @@
           <h6> <span>DOB: 14TH August 2001 | Gender: Male</span><br>
             <span>Mob. (+91) 7477216456</span><br>
             <span>rishi14082001@gmail.com</span><br>
-            <span>Father’s Name:	Mr. Virendra Kumar Singh | Mother’s Name:	Ms. Bhavya Singh</span><br>
+            <span>Father’s Name:	Mr. Virendra Kumar Singh | Mother’s Name:	Mrs. Bhavya Singh</span><br>
             <span>rishi14082001@gmail.com</span><br>
             <span>Address: Ward no.02, near Shrajashree, College Colony, Dhanpuri, District – Shahdol, (M.P.) 484114</span><br>
             <span>https://www.linkedin.com/in/shashank-chandravanshi-843b6a1b3</span><br>
